[package]
name = "press-to-start"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "=0.3.24"
juquad = { git = "https://github.com/jmmut/juquad.git", tag = "0.9.0" }
#juquad = { path = "../juquad" }


[profile.release]
strip = true
lto = true
